Fixed navbar dropdown on mobile
1. fixed hamburger dropdown of navbar on mobile dimension as it had missing categories (career coaching and placements).

--- a/src/app/components/navbar/navbar.module.css
+++ b/src/app/components/navbar/navbar.module.css
@@ -105,6 +105,20 @@
   gap: 10px;
 }
 
+@media (width >= 320px) {
+  .dropdownMenu {
+    height: 455px;
+    overflow-y: scroll;
+  }
+}
+
+@media (320px < width <= 360px) {
+  .dropdownMenu {
+    height: 525px;
+    overflow-y: scroll;
+  }
+}
+
 @media (width <=999px) {
   .wrapper {
     padding: 12px 30px;
